@@ -1,3 +1,11 @@
+2004-06-10  turkaye  <turkaye@lambada.isis.vanderbilt.edu>
+
+	* DnC/Config_Handlers/CAD_Handler.cpp: 
+	* DnC/Config_Handlers/CPK_Handler.cpp:
+	* DnC/Config_Handlers/CompImplDesc_Handler.cpp:
+
+	Memory leak problem with XMLString::transcode () is solved.
+
 Thu Jun 10 17:46:10 2004  Arvind S. Krishna  <arvindk@dre.vanderbilt.edu>
 
         * DnC/Config_Handlers/Utils.cpp:
